@@ -36,6 +36,9 @@ allprojects {
     tasks.withType(ScalaCompile) {
         scalaCompileOptions.fork = true
         scalaCompileOptions.useAnt = false
+        if(!JavaVersion.current().isJava8Compatible()) {
+            scalaCompileOptions.forkOptions.jvmArgs = ['-XX:MaxPermSize=512m']
+        }
     }
     tasks.withType(ScalaDoc) {
         doFirst {
